workloads/dvr/storagetest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: storagetest
  name: storagetest
  namespace: dvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storagetest
  template:
    metadata:
      labels:
        app: storagetest
    spec:
      # volumes:
      # - name: nfs-vol
      #   nfs:
      #     server: 192.168.0.3
      #     path: /mnt/vol1/video/test
      #     readOnly: true
      containers:
      - image: debian:buster-slim
        name: debian
        # workingDir: /nfs
        # volumeMounts:
        # - name: nfs-vol
        #   mountPath: /nfs
