workloads/dvr/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dvr
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: dvr-tv-25g-vol
        persistentVolumeClaim:
          claimName: dvr-tv-25g-claim
      # - name: dvr-tv-nfs-vol
      #   persistentVolumeClaim:
      #     claimName: dvr-tv-nfs-claim
      - name: nginx-conf-vol
        configMap:
          name: nginx-conf
      containers:
      - name: nginx
        image: nginx:1.17.5
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: dvr-tv-25g-vol
          mountPath: /tv
        # - name: dvr-tv-nfs-vol
        #   mountPath: /tv-nfs
        - name: nginx-conf-vol
          mountPath: /etc/nginx/

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: dvr
spec:
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
