workloads/dvr/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: dvr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
      - name: sonarr-config-vol
        persistentVolumeClaim:
          claimName: sonarr-config-claim
      - name: dvr-tv-25g-vol
        persistentVolumeClaim:
          claimName: dvr-tv-25g-claim
      - name: dvr-downloads-vol
        persistentVolumeClaim:
          claimName: dvr-downloads-claim
      # - name: freenas-video
      #   nfs:
        
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
        - name: web
          containerPort: 8989
        volumeMounts:
        - name: sonarr-config-vol
          mountPath: /config
        - name: dvr-tv-25g-vol
          mountPath: /tv
        - name: dvr-downloads-vol
          mountPath: /downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: dvr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - name: web
    protocol: TCP
    port: 8989
    targetPort: web
