workloads/dvr/plex-freenas.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-freenas
  namespace: dvr
spec:
  type: ExternalName
  externalName: 192.168.0.100
  selector:
    app: plex-freenas
  ports:
  - name: web
    port: 32400
    targetPort: 32400

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-freenas
  namespace: dvr
spec:
  entrypoints:
  - https
  routes:
  - match: Host(`hal.rask.dk`) && PathPrefix(`/plex`)
    kind: Rule
    services:
    - name: plex-freenas
      port: 32400
  tls:
    certResolver: default
